Correção no Build do arquivo de testes da pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
 
         - name: Build and Run Tests
           run: |
-            mvn -Dtest=teste test
+            mvn -Dtest=test test
