--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
 
         - name: Build and Run Tests
           run: |
-            mvn -Dtest=test test
+            mvn -Dtest=TestGet test
